RESOLVED FIXED62699
Fixed an inavlid ASSERT
https://bugs.webkit.org/show_bug.cgi?id=62699
Summary Fixed an inavlid ASSERT
Geoffrey Garen
Reported 2011-06-14 23:45:24 PDT
Fixed an inavlid ASSERT I found while investigating <rdar://problem/9580254> Crash in JSC::HandleHeap::finalizeWeakHandles + 92
Attachments
Patch (1.86 KB, patch)
2011-06-14 23:46 PDT, Geoffrey Garen
mitz: review+
Geoffrey Garen
Comment 1 2011-06-14 23:46:12 PDT
Geoffrey Garen
Comment 2 2011-06-15 00:08:48 PDT
Note You need to log in before you can comment on or make changes to this bug.